--- a/lib/hello.html
+++ b/lib/hello.html
@@ -1,8 +1,9 @@
-<!-- Author: Alexander Shvets (vistrel460@gmail.com) -->
+<!-- Author: Alexander Shvets (alex@githowto.com) -->
 <html>
-<head>
-</head>
-<body>
-<h1>Hello, World</h1>
-</body>
+  <head>
+    <!-- no style -->
+  </head>
+  <body>
+    <h1>Hello, World! Life is great!</h1>
+  </body>
 </html>
